aniamtions change and try video fix on safari

--- a/style/home/_home.scss
+++ b/style/home/_home.scss
@@ -187,6 +187,7 @@
       user-select: none;
       opacity: 0;
       transform: translateY(-40px);
+      pointer-events: none;
 
     
       &:hover img{
